@@ -1,4 +1,7 @@
 2010-01-01 lucas
+* Removed External Method used to validate the user name.
+
+2010-01-01 lucas
 * Added proxy field in all forms, using base configurator field library.
 
 2010-12-23 lucas
